scroller items spacing fix

--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -171,6 +171,7 @@
  */
 @mixin scroller__items() {
 	width: 100%;
+	font-size: 0; // get rid of inline-block space
 	overflow-y: hidden;
 	overflow-x: scroll;
 	white-space: nowrap;
